improved missing value handling

--- a/models.ipynb
+++ b/models.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,42 +38,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Excluding 0 observations that did not answer 1 year price change question.\n"
+      "Excluding 3103 observations that did not answer 1 year price change question.\n"
      ]
     }
    ],
    "source": [
-    "from load_data import data, categorical_vars, cts_vars, other_vars\n",
+    "#from load_data import data, categorical_vars, cts_vars, other_vars\n",
     "\n",
     "# loading data from online takes ~20 seconds\n",
     "# to speed up, save data locally and load from there:\n",
     "\n",
-    "data.to_csv(DATA_PATH,index=False)  # run this once"
+    "#data.to_csv(DATA_PATH,index=False)  # run this once"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "' Categorical_vars and cts_vars are lists of vars in each category.\\nOther_vars are ID and date variables (categorical_vars + cts_vars + other_vars = all vars)'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Categorical_vars and cts_vars are lists of vars in each category.\n",
     "# Other_vars are ID and date variables (categorical_vars + cts_vars + other_vars = all vars)\n",
@@ -109,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +112,7 @@
        "Name: durable_purchase, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,75 +123,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "NaN    24168\n",
-       "Name: price_change_amt_next_yr, dtype: int64"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data[data.treatment_bins.isnull()].price_change_amt_next_yr.value_counts(dropna=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Excluding 15245 observationsthat did not answer durable purchase question.\n",
-      "Excluding 102089 observations that did not answerconfounder questions.\n",
-      "Excluding 10354 observationsthat did not answer price change amount question.\n"
+      "Excluding 15245 observations that did not answer durable purchase question.\n",
+      "Excluding 102089 observations that did not answer confounder questions.\n",
+      "Excluding 10354 observations that did not answer price change amount question.\n"
      ]
     }
    ],
    "source": [
     "# prep features for modeling; use regression=True for regression models\n",
     "data_regression, treatment_vars, confounder_vars = prep_features(data,regression=True)  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2    191595\n",
-       "0     64499\n",
-       "1     11385\n",
-       "Name: durable_purchase, dtype: int64"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data_regression.durable_purchase.value_counts(dropna=False)  # check that we have a balanced dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_regression = data_regression.dropna(subset=confounder_vars)"
    ]
   },
   {
@@ -681,6 +617,9 @@
    ],
    "source": [
     "# Second model - some sort of XGBoost?\n",
+    "\n",
+    "data_regression, treatment_vars, confounder_vars = prep_features(data,regression=False)  \n",
+    "\n",
     "X = data_regression[confounder_vars+treatment_vars]\n",
     "Y = data_regression['durable_purchase']\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.2, random_state=7)\n",
