made imputation optional

--- a/models.ipynb
+++ b/models.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,14 +123,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Excluding 15245 observations that did not answer durable purchase question.\n",
+      "Excluding 15245 observations that refused or didn't know durable purchase question.\n",
       "Excluding 102089 observations that did not answer confounder questions.\n",
       "Excluding 10354 observations that did not answer price change amount question.\n"
      ]
@@ -601,37 +601,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([2, 2, 0, ..., 2, 2, 2])"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Excluding 15245 observations that refused or didn't know durable purchase question.\n",
+      "Excluding 102089 observations that did not answer confounder questions.\n",
+      "Excluding 10354 observations that did not answer price change amount question.\n"
+     ]
     }
    ],
    "source": [
-    "# Second model - some sort of XGBoost?\n",
+    "# Now classification models with AIPW\n",
     "\n",
-    "data_regression, treatment_vars, confounder_vars = prep_features(data,regression=False)  \n",
-    "\n",
-    "X = data_regression[confounder_vars+treatment_vars]\n",
-    "Y = data_regression['durable_purchase']\n",
+    "data_xgboost, treatment_vars, confounder_vars = prep_features(data,regression=False,impute=False)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/drewkeller/opt/anaconda3/envs/stats/lib/python3.8/site-packages/xgboost/sklearn.py:888: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
+      "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[13:26:51] WARNING: /opt/concourse/worker/volumes/live/7a2b9f41-3287-451b-6691-43e9a6c0910f/volume/xgboost-split_1619728204606/work/src/learner.cc:1061: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = data_xgboost[confounder_vars+treatment_vars]\n",
+    "Y = data_xgboost['durable_purchase']\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.2, random_state=7)\n",
     "\n",
     "model = xgb.XGBClassifier()\n",
     "model.fit(X_train, y_train)\n",
-    "y_pred = model.predict(X_test)\n",
-    "\n",
-    "# predictions = [round(value) for value in y_pred]\n",
-    "# # evaluate predictions\n",
-    "# accuracy = accuracy_score(y_test, predictions)\n",
-    "# print(\"Accuracy: %.2f%%\" % (accuracy * 100.0))"
+    "y_pred = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 74.47%\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions = [round(value) for value in y_pred]\n",
+    "# evaluate predictions\n",
+    "accuracy = accuracy_score(y_test, predictions)\n",
+    "print(\"Accuracy: %.2f%%\" % (accuracy * 100.0))"
    ]
   },
   {
