oops lost some stuff somehow i should commit more

--- a/models.ipynb
+++ b/models.ipynb
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -668,18 +668,17 @@
      "output_type": "stream",
      "text": [
       "Excluding 15245 observations that refused or didn't know durable purchase question.\n",
-      "Excluding 102089 observations that did not answer confounder questions.\n",
-      "Excluding 10354 observations that did not answer price change amount question.\n"
+      "Excluding 21490 observations that did not answer price change amount question.\n"
      ]
     }
    ],
    "source": [
-    "data_xgboost, treatment_vars, confounder_vars = prep_features(data,regression=False,missing_values='drop')  "
+    "data_xgboost, treatment_vars, confounder_vars = prep_features(data,regression=False,missing_values='imput by median')  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +693,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[14:09:51] WARNING: /opt/concourse/worker/volumes/live/7a2b9f41-3287-451b-6691-43e9a6c0910f/volume/xgboost-split_1619728204606/work/src/learner.cc:1061: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n"
+      "[14:21:54] WARNING: /opt/concourse/worker/volumes/live/7a2b9f41-3287-451b-6691-43e9a6c0910f/volume/xgboost-split_1619728204606/work/src/learner.cc:1061: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n"
      ]
     }
    ],
@@ -710,14 +709,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 74.47%\n"
+      "Accuracy: 72.99%\n"
      ]
     }
    ],
@@ -730,19 +729,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.0    0.737268\n",
-       "0.0    0.226392\n",
-       "1.0    0.036339\n",
+       "2.0    0.716315\n",
+       "0.0    0.241569\n",
+       "1.0    0.042115\n",
        "Name: durable_purchase, dtype: float64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,39 +753,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prediction vs actual percentages:\n"
+      "Prediction vs actual:\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "actual  predicted\n",
-       "0.0     0             4.129610\n",
-       "        2            18.509602\n",
-       "1.0     0             0.286070\n",
-       "        1             0.008497\n",
-       "        2             3.339376\n",
-       "2.0     0             3.381861\n",
-       "        1             0.008497\n",
-       "        2            70.336487\n",
-       "dtype: float64"
+       "0.0     0             2569\n",
+       "        1                4\n",
+       "        2            10350\n",
+       "1.0     0              204\n",
+       "        1                1\n",
+       "        2             2048\n",
+       "2.0     0             1840\n",
+       "        1                4\n",
+       "        2            36476\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print('Prediction vs actual percentages:')\n",
-    "pd.DataFrame({'actual': y_test, 'predicted': predictions}).groupby(['actual','predicted']).size()/len(predictions)*100"
+    "print('Prediction vs actual:')\n",
+    "pd.DataFrame({'actual': y_test, 'predicted': predictions}).groupby(['actual','predicted']).size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cpi_durable_1mo_lag                    -0.159047\n",
+       "unemployment_next_yr_Higher            -0.134931\n",
+       "conditions_next_yr_Worse               -0.123850\n",
+       "cpi_1mo_lag                            -0.122214\n",
+       "unemployment_rate                      -0.119386\n",
+       "price_related_yr_ago_1.0               -0.111815\n",
+       "personal_finances_next_yr_Worse        -0.104596\n",
+       "zlb_1.0                                -0.096575\n",
+       "treatment_bins_5-10                    -0.053681\n",
+       "sex_Female                             -0.053163\n",
+       "income_quintile_Lowest                 -0.048955\n",
+       "treatment_bins_20+                     -0.047087\n",
+       "education_No high school               -0.045397\n",
+       "treatment_bins_10-15                   -0.042742\n",
+       "income_change_amt_next_yr              -0.041256\n",
+       "treatment_bins_15-20                   -0.037525\n",
+       "age                                    -0.030597\n",
+       "personal_finances_next_yr_Don't know   -0.026420\n",
+       "education_Partial high school          -0.025824\n",
+       "fed_funds_rate                         -0.017376\n",
+       "education_Missing                      -0.015568\n",
+       "income_quintile_Lower middle           -0.015459\n",
+       "conditions_next_yr_Don't know          -0.012327\n",
+       "conditions_next_yr_Refused             -0.009038\n",
+       "income_quintile_Missing                -0.008527\n",
+       "personal_finances_next_yr_Refused      -0.008310\n",
+       "unemployment_next_yr_Don't know        -0.008193\n",
+       "household_size                         -0.007997\n",
+       "sex_Missing                            -0.005301\n",
+       "unemployment_next_yr_Refused           -0.003831\n",
+       "personal_finances_next_yr_Same          0.001609\n",
+       "education_High school                   0.002860\n",
+       "income_quintile_Middle                  0.006633\n",
+       "education_Graduate school               0.007672\n",
+       "education_Some college                  0.008443\n",
+       "income_quintile_Upper middle            0.014368\n",
+       "education_College                       0.018188\n",
+       "income_quintile_Highest                 0.038955\n",
+       "conditions_next_yr_Same                 0.044626\n",
+       "unemployment_next_yr_Lower              0.053629\n",
+       "sex_Male                                0.053638\n",
+       "conditions_next_yr_Better               0.064519\n",
+       "personal_finances_next_yr_Better        0.079341\n",
+       "unemployment_next_yr_Same               0.085814\n",
+       "treatment_bins_0-5                      0.092900\n",
+       "zlb_0.0                                 0.096575\n",
+       "price_related_yr_ago_0.0                0.111815\n",
+       "durable_purchase                        1.000000\n",
+       "treatment_bins_Missing                       NaN\n",
+       "Name: durable_purchase, dtype: float64"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_xgboost[confounder_vars+treatment_vars+['durable_purchase']].corr()['durable_purchase'].sort_values()"
    ]
   },
   {
