--- a/models.ipynb
+++ b/models.ipynb
@@ -878,6 +878,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15603"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_params = sum([coef.shape[0] * coef.shape[1] for coef in model3.coefs_])\n",
+    "num_params += sum([intercept.shape[0] for intercept in model3.intercepts_])\n",
+    "num_params"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [
