--- a/models.ipynb
+++ b/models.ipynb
@@ -1231,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1289,6 +1289,10 @@
     "\n",
     "    predictions0 = np.full_like(A, np.nan, dtype=float)\n",
     "    predictions1 = np.full_like(y, np.nan, dtype=float)\n",
+    "    predictions2 = np.full_like(y, np.nan, dtype=float)\n",
+    "    predictions3 = np.full_like(y, np.nan, dtype=float)\n",
+    "    predictions4 = np.full_like(y, np.nan, dtype=float)\n",
+    "\n",
     "    if output_type == 'binary':\n",
     "        kf = StratifiedKFold(n_splits=n_splits, shuffle=True, random_state=RANDOM_SEED)\n",
     "    elif output_type == 'continuous':\n",
@@ -1312,37 +1316,69 @@
     "\n",
     "    \n",
     "    for train_index, test_index in kf.split(X_w_treatment, y):\n",
-    "        X_train = X_w_treatment.loc[train_index]\n",
-    "        y_train = y.loc[train_index]\n",
+    "        X_train = X_w_treatment.iloc[train_index]\n",
+    "        y_train = y.iloc[train_index]\n",
     "        q = make_model()\n",
     "        q.fit(X_train, y_train)\n",
     "\n",
     "        if output_type =='binary':\n",
-    "            predictions0[test_index] = q.predict_proba(X0.loc[test_index])[:, 1]\n",
-    "            predictions1[test_index] = q.predict_proba(X1.loc[test_index])[:, 1]\n",
+    "            predictions0[test_index] = q.predict_proba(X0.iloc[test_index])[:, 1]\n",
+    "            predictions1[test_index] = q.predict_proba(X1.iloc[test_index])[:, 1]\n",
+    "            predictions2[test_index] = q.predict_proba(X2.iloc[test_index])[:, 1]\n",
+    "            predictions3[test_index] = q.predict_proba(X3.iloc[test_index])[:, 1]\n",
+    "            predictions4[test_index] = q.predict_proba(X4.iloc[test_index])[:, 1]\n",
     "        elif output_type == 'continuous':\n",
-    "            predictions0[test_index] = q.predict(X0.loc[test_index])\n",
-    "            predictions1[test_index] = q.predict(X1.loc[test_index])\n",
+    "            predictions0[test_index] = q.predict(X0.iloc[test_index])\n",
+    "            predictions1[test_index] = q.predict(X1.iloc[test_index])\n",
     "\n",
     "\n",
     "    assert np.isnan(predictions0).sum() == 0\n",
     "    assert np.isnan(predictions1).sum() == 0\n",
-    "    return predictions0, predictions1"
+    "    return predictions0, predictions1, predictions2, predictions3, predictions4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Fit Q(X,A) model\n",
     "# get conditional outcomes\n",
-    "# Q0_lm, Q1_lm = outcome_k_fold_fit_and_predict(make_Q_model, X=confounders, y=outcome, A=treatment, \\\n",
-    "#                                         n_splits=5, output_type=\"continuous\")\n",
+    "Q0_lm, Q1_lm, Q2_lm, Q3_lm, Q4_lm = outcome_k_fold_fit_and_predict(make_Q_model, X=data_xgboost[confounder_vars], y=data_xgboost[\"durable_purchase\"], A=data_xgboost[\"treatment_bins\"], \\\n",
+    "                                        n_splits=5, output_type=\"binary\")\n",
     "\n",
     "# Fit g(x) models\n",
-    "g = treatment_k_fold_fit_and_predict(make_g_model, X=data_xgboost[confounder_vars], A=data_xgboost[\"treatment_bins\"], n_splits=5)"
+    "#g = treatment_k_fold_fit_and_predict(make_g_model, X=data_xgboost[confounder_vars], A=data_xgboost[\"treatment_bins\"], n_splits=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0.02879476, 0.01503246, 0.01212156, ..., 0.06306148, 0.0418044 ,\n",
+       "        0.04114386]),\n",
+       " array([0.02716771, 0.01540205, 0.01192225, ..., 0.06640356, 0.03937897,\n",
+       "        0.03587143]),\n",
+       " array([0.02614673, 0.01462058, 0.01194302, ..., 0.0647261 , 0.04093514,\n",
+       "        0.03473835]),\n",
+       " array([0.02510282, 0.01458775, 0.01194302, ..., 0.06915155, 0.04093514,\n",
+       "        0.03473835]),\n",
+       " array([0.02435807, 0.0139748 , 0.01032661, ..., 0.06026321, 0.04979539,\n",
+       "        0.03646824]))"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Q0_lm, Q1_lm, Q2_lm, Q3_lm, Q4_lm"
    ]
   }
  ],
