--- a/models.ipynb
+++ b/models.ipynb
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1214,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1231,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1334,51 +1334,59 @@
     "\n",
     "    assert np.isnan(predictions0).sum() == 0\n",
     "    assert np.isnan(predictions1).sum() == 0\n",
-    "    return predictions0, predictions1, predictions2, predictions3, predictions4"
+    "    return predictions0, predictions1, predictions2, predictions3, predictions4\n",
+    "\n",
+    "def ate_aiptw(Q_control, Q_treat, g, A, Y, prob_t=None):\n",
+    "    \"\"\"\n",
+    "    Double ML estimator for the ATE\n",
+    "    Return: aiptw of ATE and its standard error\n",
+    "    \"\"\"\n",
+    "    # number of observations\n",
+    "    n = Y.shape[0]\n",
+    "    \n",
+    "    # ate aiptw\n",
+    "    tau_hat = (Q_treat - Q_control + A*(Y-Q_treat)/g - (1-A)*(Y-Q_control)/(1-g)).mean()\n",
+    "  \n",
+    "    # influence curve and standard error of aiptw\n",
+    "    phi = Q_treat - Q_control + A*(Y-Q_treat)/g - (1-A)*(Y-Q_control)/(1-g) - tau_hat   \n",
+    "    std_hat = np.std(phi) / np.sqrt(n)\n",
+    "\n",
+    "    return tau_hat, std_hat"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fit Q(X,A) model\n",
+    "# Fit Q(A,X) model\n",
     "# get conditional outcomes\n",
     "Q0_lm, Q1_lm, Q2_lm, Q3_lm, Q4_lm = outcome_k_fold_fit_and_predict(make_Q_model, X=data_xgboost[confounder_vars], y=data_xgboost[\"durable_purchase\"], A=data_xgboost[\"treatment_bins\"], \\\n",
     "                                        n_splits=5, output_type=\"binary\")\n",
     "\n",
     "# Fit g(x) models\n",
-    "#g = treatment_k_fold_fit_and_predict(make_g_model, X=data_xgboost[confounder_vars], A=data_xgboost[\"treatment_bins\"], n_splits=5)"
+    "g = treatment_k_fold_fit_and_predict(make_g_model, X=data_xgboost[confounder_vars], A=data_xgboost[\"treatment_bins\"], n_splits=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(array([0.02879476, 0.01503246, 0.01212156, ..., 0.06306148, 0.0418044 ,\n",
-       "        0.04114386]),\n",
-       " array([0.02716771, 0.01540205, 0.01192225, ..., 0.06640356, 0.03937897,\n",
-       "        0.03587143]),\n",
-       " array([0.02614673, 0.01462058, 0.01194302, ..., 0.0647261 , 0.04093514,\n",
-       "        0.03473835]),\n",
-       " array([0.02510282, 0.01458775, 0.01194302, ..., 0.06915155, 0.04093514,\n",
-       "        0.03473835]),\n",
-       " array([0.02435807, 0.0139748 , 0.01032661, ..., 0.06026321, 0.04979539,\n",
-       "        0.03646824]))"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The ATE AIPTW is 577.5934012212508 with a std = 2.0863287004511397\n"
+     ]
     }
    ],
    "source": [
-    "Q0_lm, Q1_lm, Q2_lm, Q3_lm, Q4_lm"
+    "data_and_nuisance_estimates_xgb = pd.DataFrame({'g': g, 'Q_control': Q0_lm, 'Q_treat': Q1_lm, 'A': data_xgboost[\"treatment_bins\"], 'Y': data_xgboost[\"durable_purchase\"]})\n",
+    "# AIPW for 5-10% inflation predictors compared to 0-5%\n",
+    "tau_hat, std_hat = ate_aiptw(**data_and_nuisance_estimates_xgb)\n",
+    "print(f\"The ATE AIPTW is {tau_hat} with a std = {std_hat}\")"
    ]
   }
  ],
