--- a/models.ipynb
+++ b/models.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,22 +73,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0-5      185749\n",
-       "5-10      31599\n",
-       "NaN       18725\n",
-       "10-15      6010\n",
-       "15-20      2836\n",
-       "20+        2368\n",
+       "0.0    185749\n",
+       "1.0     31599\n",
+       "NaN     18725\n",
+       "2.0      6010\n",
+       "3.0      2836\n",
+       "4.0      2368\n",
        "Name: treatment_bins, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        "Name: durable_purchase, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1231,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1314,7 +1314,6 @@
     "    X4 = X_w_treatment.copy()\n",
     "    X4[\"A\"] = 4\n",
     "\n",
-    "    \n",
     "    for train_index, test_index in kf.split(X_w_treatment, y):\n",
     "        X_train = X_w_treatment.iloc[train_index]\n",
     "        y_train = y.iloc[train_index]\n",
@@ -1339,14 +1338,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Excluding 12029 observations that refused or didn't know durable purchase question.\n",
+      "Excluding 16763 observations that did not answer price change amount question.\n"
+     ]
+    }
+   ],
    "source": [
+    "data_xgboost, treatment_vars, confounder_vars = prep_features(data,regression=False,missing_values='retain all')  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/drewkeller/opt/anaconda3/envs/stats/lib/python3.8/site-packages/xgboost/sklearn.py:888: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
+      "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[22:17:34] WARNING: /opt/concourse/worker/volumes/live/7a2b9f41-3287-451b-6691-43e9a6c0910f/volume/xgboost-split_1619728204606/work/src/learner.cc:1061: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "[22:17:59] WARNING: /opt/concourse/worker/volumes/live/7a2b9f41-3287-451b-6691-43e9a6c0910f/volume/xgboost-split_1619728204606/work/src/learner.cc:1061: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "[22:18:26] WARNING: /opt/concourse/worker/volumes/live/7a2b9f41-3287-451b-6691-43e9a6c0910f/volume/xgboost-split_1619728204606/work/src/learner.cc:1061: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "[22:18:56] WARNING: /opt/concourse/worker/volumes/live/7a2b9f41-3287-451b-6691-43e9a6c0910f/volume/xgboost-split_1619728204606/work/src/learner.cc:1061: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "[22:19:25] WARNING: /opt/concourse/worker/volumes/live/7a2b9f41-3287-451b-6691-43e9a6c0910f/volume/xgboost-split_1619728204606/work/src/learner.cc:1061: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
     "# Fit Q(X,A) model\n",
     "# get conditional outcomes\n",
-    "Q0_lm, Q1_lm, Q2_lm, Q3_lm, Q4_lm = outcome_k_fold_fit_and_predict(make_Q_model, X=data_xgboost[confounder_vars], y=data_xgboost[\"durable_purchase\"], A=data_xgboost[\"treatment_bins\"], \\\n",
-    "                                        n_splits=5, output_type=\"binary\")\n",
+    "Q0_lm, Q1_lm, Q2_lm, Q3_lm, Q4_lm = outcome_k_fold_fit_and_predict(\n",
+    "    make_Q_model, X=data_xgboost[confounder_vars], y=data_xgboost[\"durable_purchase\"], \n",
+    "    A=data_xgboost[\"treatment_bins\"], n_splits=5, output_type=\"binary\",eval_metric = 'mlogloss')\n",
     "\n",
     "# Fit g(x) models\n",
     "#g = treatment_k_fold_fit_and_predict(make_g_model, X=data_xgboost[confounder_vars], A=data_xgboost[\"treatment_bins\"], n_splits=5)"
@@ -1354,37 +1393,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([0.02879476, 0.01503246, 0.01212156, ..., 0.06306148, 0.0418044 ,\n",
-       "        0.04114386]),\n",
-       " array([0.02716771, 0.01540205, 0.01192225, ..., 0.06640356, 0.03937897,\n",
-       "        0.03587143]),\n",
-       " array([0.02614673, 0.01462058, 0.01194302, ..., 0.0647261 , 0.04093514,\n",
-       "        0.03473835]),\n",
-       " array([0.02510282, 0.01458775, 0.01194302, ..., 0.06915155, 0.04093514,\n",
-       "        0.03473835]),\n",
-       " array([0.02435807, 0.0139748 , 0.01032661, ..., 0.06026321, 0.04979539,\n",
-       "        0.03646824]))"
+       "array([0.02410747, 0.01306038, 0.01481371, ..., 0.04631501, 0.02701618,\n",
+       "       0.0221121 ])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Q0_lm, Q1_lm, Q2_lm, Q3_lm, Q4_lm"
+    "Q0_lm"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.6 64-bit",
+   "display_name": "Python 3.8.8 ('stats')",
    "language": "python",
    "name": "python3"
   },
@@ -1398,12 +1436,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "6e666a3ba3648cc9e607b3cf542e9d75d4082c9e9424a59415dd75d5759d492a"
    }
   }
  },
